Second commit – new text test add

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Hello World!</h1>
 
-    <p> Welcome to my first web page!</p>        
+    <p> Welcome to my first web page! I'm adding some more text into this page!</p>        
 </body>
 </html>
